# mcp-maruru-browser-public

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  mcp_maruru_browser_server.py  pyproject.toml  test_integration.py  test_maruru_browser.py  test_record_replay.py
docs/plans/: 2026-05-27-new-window-support-design.md
